<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_goal"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_diet"
        android:icon="@drawable/ic_diet_planer"
        android:title="@string/title_planner" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_exercise" />
    <item
        android:id="@+id/navigation_posture"
        android:icon="@drawable/ic_posture"
        android:title="@string/title_posture_detection" />

</menu>