<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aman.fityatraapp.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.aman.fityatraapp.ui.fragment.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.aman.fityatraapp.ui.fragment.ExerciseFragment"
        android:label="@string/title_exercise"
        tools:layout="@layout/fragment_exercise" />
    <fragment
        android:id="@+id/navigation_posture"
        android:name="com.aman.fityatraapp.ui.fragment.PostureDetectionFragment"
        android:label="@string/title_posture_detection"
        tools:layout="@layout/fragment_posture_detection" />
    <fragment
        android:id="@+id/navigation_diet"
        android:name="com.aman.fityatraapp.ui.fragment.DietPlannerFragment"
        android:label="@string/title_diet_chart"
        tools:layout="@layout/fragment_diet_planner" />
</navigation>